--- a/hypr/desktop.conf
+++ b/hypr/desktop.conf
@@ -1,4 +1,5 @@
 source = ~/dotfiles/hypr/default.conf 
+
 $mon1 = DP-3
 $mon2 = HDMI-A-1
 
@@ -10,3 +11,10 @@ workspace=2, monitor:$mon2
 workspace=3, monitor:$mon1
 workspace=4, monitor:$mon2
 workspace=5, monitor:$mon2
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+cursor {
+    no_hardware_cursors = true
+}
