--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -10,6 +10,7 @@ $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
 $menu-emoji = rofi -modi emoji -show emoji 
+$browser = qutebrowser
 
 #################
 ### AUTOSTART ###
@@ -25,7 +26,7 @@ exec-once = waybar
 exec-once = nm-applet --indicator
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 1 silent] $browser 
 exec-once = [workspace 2 silent] kitty -e tmux new -s main 
 exec-once = [workspace 3 silent] kitty -e tmux new -s code 
 
@@ -175,10 +176,8 @@ device {
 $mainMod = ALT # Sets "ALT" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, A, killactive,,
 bind = $mainMod SHIFT, M, exit,
-bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
@@ -189,7 +188,12 @@ bind = $mainMod, Z, fullscreen, 1
 bind = $mainMod, Q, fullscreen, 
 bind = $mainMod, ASTERISK, exec, hyprlock 
 bind = $mainMod, E, exec, $menu-emoji
+
+# Apps
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, O, exec, obsidian
+bind = $mainMod, B, exec, $browser
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -226,7 +230,6 @@ bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
-
 
 # Screenshot screen
 bind = , PRINT, exec, grim - | swappy -f -
