--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -8,5 +8,9 @@ config_version: 2
 settings:
   content.media.audio_capture:
     https://meet.google.com: true
+  content.media.audio_video_capture:
+    https://meet.google.com: true
   content.media.video_capture:
     https://meet.google.com: true
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: true
