--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,8 +6,8 @@
 
 config_version: 2
 settings:
-  content.desktop_capture:
-    https://meet.google.com: true
+  content.javascript.clipboard:
+    https://github.com: access-paste
   content.media.audio_capture:
     https://meet.google.com: true
   content.media.audio_video_capture:
