--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -10,7 +10,7 @@ $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
 $menu-emoji = rofi -modi emoji -show emoji 
-$browser = qutebrowser
+$browser = firefox
 
 #################
 ### AUTOSTART ###
