--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -142,12 +142,12 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = fr
-    kb_variant =
+    kb_layout = fr, us
+    kb_variant = ,intl
     kb_model =
     kb_options =
     kb_rules =
-
+    kb_options = grp:alt_shift_toggle
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -174,7 +174,7 @@ device {
 ####################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "ALT" key as main modifier
+$mainMod = SUPER 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, A, killactive,,
