--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -142,8 +142,8 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = fr, us
-    kb_variant = ,intl
+    kb_layout = us, fr
+    kb_variant = intl,
     kb_model =
     kb_options =
     kb_rules =
@@ -209,16 +209,27 @@ bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, L, movewindow, r
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, ampersand, workspace, 1
-bind = $mainMod, eacute, workspace, 2
-bind = $mainMod, quotedbl, workspace, 3
-bind = $mainMod, apostrophe, workspace, 4
-bind = $mainMod, parenleft, workspace, 5
-bind = $mainMod, minus, workspace, 6
-bind = $mainMod, egrave, workspace, 7
-bind = $mainMod, underscore, workspace, 8
-bind = $mainMod, ccedilla, workspace, 9
-bind = $mainMod, agrave, workspace, 10
+# bind = $mainMod, ampersand, workspace, 1
+# bind = $mainMod, eacute, workspace, 2
+# bind = $mainMod, quotedbl, workspace, 3
+# bind = $mainMod, apostrophe, workspace, 4
+# bind = $mainMod, parenleft, workspace, 5
+# bind = $mainMod, minus, workspace, 6
+# bind = $mainMod, egrave, workspace, 7
+# bind = $mainMod, underscore, workspace, 8
+# bind = $mainMod, ccedilla, workspace, 9
+# bind = $mainMod, agrave, workspace, 10
+
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, ampersand, movetoworkspace, 1
