--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -11,6 +11,7 @@
     "hyprland/window"
   ],
   "modules-right": [
+    "custom/kanata",
     "pulseaudio",
     "disk",
     "cpu",
@@ -58,10 +59,33 @@
       }
     }
   },
+  "custom/kanata": {
+    "exec": "journalctl -u kanata-default.service --no-pager -n 50 | grep deflayer | tail -n 1 | awk '{print $NF}'",
+    "interval": 2,
+    "format": "{}  ",
+    "tooltip": false
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}%",
+    "format-bluetooth": "{icon} {volume}% {icon}",
+    "format-bluetooth-muted": "󰟎 {icon}",
+    "format-muted": "󰟎",
+    "format-source-muted": "",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", "", ""]
+    },
+    "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle"
+  },
   "disk": {
-      "path": "/",
-      "interval": 30,
-      "format": " {percentage_used}%"
+    "path": "/",
+    "interval": 30,
+    "format": " {percentage_used}%"
   },
   "cpu": {
     "format": " {usage}%",
@@ -94,23 +118,6 @@
     // "format-alt": "{time} {icon}",
     // "format-good": "", // An empty format will hide the module
     // "format-full": "",
-  },
-  "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "format-bluetooth": "{icon} {volume}% {icon}",
-    "format-bluetooth-muted": "󰟎 {icon}",
-    "format-muted": "󰟎",
-    "format-source-muted": "",
-    "format-icons": {
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "portable": "",
-      "car": "",
-      "default": ["", "", ""]
-    },
-    "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle"
   },
   "custom/power": {
     "format" : "⏻ ",
