--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -185,7 +185,7 @@ bind = $mainMod, C, exec, $menu-clipboard
 bind = $mainMod, S, exec, ~/dotfiles/scripts/rofi-sink.py
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, N, togglesplit, # dwindle
-bind = $mainMod, Z, fullscreen, 1 
+bind = $mainMod, W, fullscreen, 1 
 bind = $mainMod, A, fullscreen, 
 bind = $mainMod, L, exec, hyprlock 
 bind = $mainMod, E, exec, $menu-emoji
