--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -143,7 +143,7 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us, fr
-    kb_variant = intl,
+    kb_variant = altgr-intl,
     kb_model =
     kb_options =
     kb_rules =
