--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -187,7 +187,7 @@ bind = $mainMod, S, exec, ~/dotfiles/scripts/rofi-sink.py
 bind = $mainMod, N, togglesplit, # dwindle
 bind = $mainMod, W, fullscreen, 1 
 bind = $mainMod, A, fullscreen, 
-bind = $mainMod, L, exec, hyprlock 
+bind = $mainMod, \, exec, hyprlock 
 bind = $mainMod, E, exec, $menu-emoji
 
 # Apps
