--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -179,7 +179,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, M, exit,
-bind = $mainMod, space, togglefloating,
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
 bind = $mainMod, S, exec, ~/dotfiles/scripts/rofi-sink.py
