--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -142,12 +142,11 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us, fr
+    kb_layout = us,
     kb_variant = altgr-intl,
     kb_model =
     kb_options =
     kb_rules =
-    kb_options = grp:alt_shift_toggle
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
