--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -201,6 +201,9 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+bind = $mainMod CTRL, H, cyclenext, prev
+bind = $mainMod CTRL, L, cyclenext
+
 # Move windows
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, J, movewindow, d
