--- a/nvim/lua/snippets/package.json
+++ b/nvim/lua/snippets/package.json
@@ -7,6 +7,7 @@
           "javascript",
           "javascriptreact",
           "typescript",
+          "typescriptreact",
           "vue",
           "svelte",
           "astro"
